<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Where are they now?</string>
    <string name="description">Determining the location of relatives and friends</string>
    <string name="version">Version:</string>
    <string name="for_about">Andrey Yakovlev © 2025–2026\nhttps://github.com/mammoth70\n\nTerms of use of individual Yandex Maps services:\n https://yandex.ru/legal/maps_api/</string>

    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="self">My position</string>

    <string name="permissions">permissions</string>
    <string name="titlePermissions">Permissions</string>
    <string name="users">contacts</string>
    <string name="back">back</string>
    <string name="titleUser">Contact card</string>
    <string name="titleColors">Select a label</string>
    <string name="map">map</string>
    <string name="settings">settings</string>
    <string name="titleSettings">Settings</string>
    <string name="about">about</string>

    <string name="selectInternet">Sync via internet</string>
    <string name="activationLink">Activation link</string>
    <string name="activateDevice">Activate</string>
    <string name="deactivateDevice">Deactivate</string>
    <string name="activated">%s acivated</string>
    <string name="activationError">Activation error</string>
    <string name="getLocationsError">Recv location error</string>
    <string name="setLocationError">Send location error</string>
    <string name="sync">Sync</string>
    <string name="noInternet">No internet connection</string>
    <string name="workerStarted">Server sync started</string>
    <string name="workerStopped">Server sync stopped</string>

    <string name="selectMap">Select a map</string>
    <string name="map_text">output coordinates as text</string>
    <string name="map_openstreet_org">OpenStreet maps</string>
    <string name="map_yandex_ru">Yandex Maps</string>
    <string name="my_phone_number">My phone number</string>
    <string name="mapZoom">Map zoom</string>
    <string name="mapTilt">Camera tilt \u00b0</string>
    <string name="mapNord">Rotate the map to the north</string>
    <string name="mapZoomIn">Map Zoom in</string>
    <string name="mapZoomOut">Map Zoom out</string>
    <string name="map2d">Map 2D</string>
    <string name="map3d">Map 3D</string>
    <string name="mapCircle">Show circle</string>
    <string name="mapCircleRadius">Radius of a circle in m.</string>
    <string name="colorsSpanCount">Label selection columns</string>

    <string name="selectThemeColor">Select theme color</string>
    <string name="themeDynamic">dynamic</string>
    <string name="themeDefault">default</string>
    <string name="themeRed">red</string>
    <string name="themeYellow">yellow</string>
    <string name="themeGreen">green</string>
    <string name="themeBlue">blue</string>
    <string name="themeM3">google</string>
    <string name="selectThemeMode">Select theme mode</string>
    <string name="themeDay">day</string>
    <string name="themeSystem">system</string>
    <string name="themeNight">night</string>

    <string name="request">"request"</string>
    <string name="request_fine_location">"Request the fine location permission"</string>
    <string name="request_background_location">"Request the background location permission"</string>
    <string name="request_SMS">"Request the SMS permission"</string>
    <string name="request_notifications">"Request the notifications permission"</string>
    <string name="access_coarse_location">Coarse location</string>
    <string name="access_fine_location">Fine location</string>
    <string name="access_background_location">Background location</string>
    <string name="access_any_mode">(Allow in any mode)</string>
    <string name="access_Receive_SMS">Receive SMS</string>
    <string name="access_Send_SMS">Send SMS</string>
    <string name="access_notifications">Notifications</string>
    <string name="allow_fine_location">Please allow the fine location permission.</string>
    <string name="allow_background_location">Please allow the background location permission.</string>
    <string name="allow_SMS">Please allow the SMS permission.</string>
    <string name="allow_notifications">Please allow notifications permission.</string>
    <string name="location_request_blocked">Geolocation permission request is blocked.</string>
    <string name="location_bg_request_blocked">Background work request is blocked.</string>
    <string name="sms_request_blocked">SMS permission request is blocked.</string>
    <string name="notifications_request_blocked">Notification permission request is blocked.</string>
    <string name="set_access_manually">Set permissions manually.</string>

    <string name="bootom_sheet_title">Why do you need permissions?</string>
    <string name="bootom_sheet_text">The application determines the location of relatives and friends.
        \nTherefore, it needs permission to determine the exact location to work.
        \n\nWe want to know the location of a loved one, even if his phone is in sleep mode or his screen is locked.
        \nTherefore, the application needs rights to work in the background. On the permission screen, this option is called
        \"Allow in any mode\".
        \n\nRequests for geolocation and responses with coordinates are transmitted via SMS messages.
        \nTherefore, the application needs rights to receive and send SMS.
        \n\nNotifications allow the app to alert you whenever it accesses your geolocation.</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="time">time</string>
    <string name="now">now</string>
    <string name="long_ago">long ago</string>
    <string name="minutes_ago">%1$d min. ago</string>
    <string name="hours_ago">%1$d h. ago</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="before_yesterday">the day before yesterday</string>

    <string name="menu_add_user">Add contact</string>
    <string name="menu_delete_user">Delete contact</string>
    <string name="menu_edit_user">Edit contact</string>
    <string name="menu_sms_request_user">Find out location</string>
    <string name="menu_sms_answer_user">I\'m here.</string>
    <string name="failed_to_add_user">Failed to add contact</string>
    <string name="failed_to_delete_user">Failed to delete contact</string>
    <string name="failed_to_change_user">Failed to change contact</string>
    <string name="err_empty_user">You must enter the contact name</string>
    <string name="err_empty_phone">You must enter the phone number.</string>
    <string name="err_not_unique_phone">The phone must be unique</string>
    <string name="err_empty_label">You need to select a label</string>

    <string name="ed_phone">Phone number</string>
    <string name="ed_name">Name Surname</string>
    <string name="ed_label">Label</string>

    <string name="notification_channel_name">Where are they now?</string>
    <string name="notification_title">Location Update</string>
    <string name="notification_text">Location coordinates for response…</string>

    <string name="denied1" translatable="false">\u2716</string>
    <string name="granted1" translatable="false">\u2714</string>
</resources>