<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:visible="true"
        >
    <item
        android:orderInCategory="1"
        android:title="@string/menu_sms_request_user"
        android:id="@+id/item_sms_request_user"
        />
    <item
        android:orderInCategory="2"
        android:title="@string/menu_sms_answer_user"
        android:id="@+id/item_sms_answer_user"
        />
    </group>
    <group
        android:id="@+id/group2"
        android:visible="true"
        >
    <item
        android:orderInCategory="3"
        android:title="@string/menu_edit_user"
        android:id="@+id/item_edit_user"
        />
    <item
        android:orderInCategory="4"
        android:title="@string/menu_add_user"
        android:id="@+id/item_add_user"
        />
    <item
        android:orderInCategory="5"
        android:title="@string/menu_delete_user"
        android:id="@+id/item_delete_user"
        />
    </group>
</menu>