<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/my_phone_number"
                android:autofillHints=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/myphone"
                    android:inputType="phone"
                    android:digits="+-1234567890 ()"
                    android:maxLength="20"
                    android:ems="20"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/selectTheme"
                android:textSize="16sp"
                />

            <RadioGroup
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                >

                <RadioButton
                    android:id="@+id/themeDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/themeDay"
                    />

                <RadioButton
                    android:id="@+id/themeSystem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/themeSystem"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/themeNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/themeNight"
                    />
            </RadioGroup>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/selectMap"
            android:textSize="16sp"
            />

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <RadioButton
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_text"
                />

            <RadioButton
                android:id="@+id/OpenStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_openstreet_org"
                />

            <RadioButton
                android:id="@+id/Yandex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_yandex_ru"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/mapZoom"
            android:textSize="16sp"
            />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderMapZoom"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/mapZoom"
            android:stepSize="1.0"
            android:value="17.0"
            android:valueFrom="10.0"
            android:valueTo="19.0"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/mapTilt"
            android:textSize="16sp"
            />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderMapTilt"
            android:layout_width="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mapTilt"
            android:stepSize="10.0"
            android:value="30.0"
            android:valueFrom="0.0"
            android:valueTo="50.0"
            />

        <CheckBox
            android:id="@+id/checkBoxCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/mapCircle"
            android:textSize="16sp"
            />
    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <CheckBox
                android:id="@+id/checkBoxService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/selectService"
                android:textSize="16sp"
                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>